# aol-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml  release.yml
config/: mcp.json.example
tests/: test_server.py
