[project]
name = "aol-mcp"
version = "0.2.1"
description = "MCP server for AOL Mail via IMAP and SMTP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
aol-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/kubegrind/aol-mcp-server"
Repository = "https://github.com/kubegrind/aol-mcp-server"
Issues = "https://github.com/kubegrind/aol-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
